import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    id 'java'
    id 'jvm-test-suite'
    alias(libs.plugins.spring.boot)
}

group = 'org.mtech'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

testing {
    suites {
        configureEach {
            useJUnitJupiter()
            dependencies {
                implementation project()
                implementation platform(SpringBootPlugin.BOM_COORDINATES)
                annotationProcessor(libs.processor.lombok)
                implementation(libs.processor.lombok)
                implementation.bundle(libs.bundles.test)
            }
        }

        unit(JvmTestSuite) {
            sources {
                java {
                    srcDir("src/test/unit/java")
                }
            }
            dependencies {
                implementation(libs.spring.boot.starter.validation)
            }
        }

        architecture(JvmTestSuite) {
            sources {
                java {
                    srcDir("src/test/architecture/java")
                }
            }
            dependencies {
                implementation(libs.test.archunit)
            }
            targets {
                configureEach {
                    testTask.configure {
                        shouldRunAfter(testing.suites.unit)
                    }
                }
            }
        }

        integration(JvmTestSuite) {
            sources {
                java {
                    srcDir("src/test/integration/java")
                }
                resources {
                    srcDir("src/test/integration/resources")
                }
            }
            dependencies {
                implementation(libs.database.starter.data.jdbc)
                runtimeOnly(libs.database.h2)
            }
            targets {
                configureEach {
                    testTask.configure {
                        shouldRunAfter(testing.suites.unit)
                    }
                }
            }
        }
    }

    tasks.named("check") {
        dependsOn(testing.suites.unit)
        dependsOn(testing.suites.architecture)
        dependsOn(testing.suites.integration)
    }
}

dependencies {
    implementation platform(SpringBootPlugin.BOM_COORDINATES)
    implementation libs.bundles.spring
    runtimeOnly libs.database.h2
    compileOnly libs.processor.lombok
    annotationProcessor libs.processor.lombok
}